@@ -176,17 +176,18 @@ murrine_draw_button (cairo_t *cr,
 	cairo_set_line_width (cr, 1.0);
 
 	/* Start drawing the inset/shadow */
+
 	if (!widget->active && !widget->disabled && widget->reliefstyle > 1)
 	{
 		murrine_rounded_rectangle (cr, xos, yos, width-(xos*2), height-(yos*2), widget->roundness, widget->corners);
 		murrine_set_color_rgba (cr, &border, 0.18);
 		cairo_stroke (cr);
 	}
-	else if (widget->reliefstyle != 0)
+	else if (widget->reliefstyle != 0 && xos >= 0.5 && yos >= 0.5)
 		murrine_draw_inset (cr, &widget->parentbg, xos-0.5, yos-0.5,
 		                    width-(xos*2)+1, height-(yos*2)+1,
 		                    widget->roundness+1, widget->corners);
-
+	
 	murrine_mix_color (&border, &fill, 0.4, &border);
 
 	/* Draw the bg */
